Fixed the overflow and the event listener for the range input

--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,10 @@ input[type="color"]::-webkit-color-swatch {
     width: 600px;
     height: 600px;
 
+    max-width: 800px;
+    max-height: 800px;
+    overflow: hidden;
+
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
